--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "type": "module",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "method-override": "^3.0.0"
